2005-07-15  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/plaf/basic/BasicTextUI.java:
	(RootView.removeUpdate): Properly update the caret position after text
	has been removed.

2005-07-15  Mark Wielaard  <mark@klomp.org>

	* NEWS: Add 0.17 release date and new features.
	* configure.ac: Set version to 0.17.

2005-07-15  Robert Schuster  <robertschuster@fsfe.org>

	* javax/swing/AbstractButton.java:
	(init): Do not change field text if argument text is null.

2005-07-15  Mark Wielaard  <mark@klomp.org>

	* java/util/logging/Logger.java (getCallerStackFrame): 
	Make sure index < stackTrace.length and return null otherwise.
	(log): Check for caller == null.

2005-07-15  Roman Kennke  <roman@kennke.org>

	* javax/swing/AbstractButton.java
	(AbstractButton): Directly call init() and updateUI().
	(AbstractButton(String, Icon)): Removed. This is not necessary
	since we have init(String, Icon) for that purpose.
	(getActionCommand): Reverted to previous behaviour: If
	actionCommand is set, return this, otherwise return text, even
	if text is null.
	* javax/swing/JButton.java
	(JButton(String, Icon)): Call super() and init(String, Icon)
	instead of super(String, Icon).
	* javax/swing/JMenuItem.java
	(JMenuItem): Call super() instead of super(String, Icon).
	(JMenuItem(Icon)): Call this(String, Icon) instead of
	super(String, Icon).
	(JMenuItem(String)): Call this(String, Icon) instead of
	super(String, Icon).
	(JMenuItem(Action)): Call super() instead of
	super(String, Icon).
	(JMenuItem(String, Icon)): Call super() and init(String, Icon)
	instead of super(String, Icon).
	(JMenuItem(String, int)): Call this(String, Icon) instead of
	super(String, Icon).
	* javax/swing/JToggleButton.java
	(ToggleButtonModel.setPressed): Fire an ActionEvent if button
	is released. According to my Mauve tests, it seems that this
	is what the JDK does, so do we.
	(ToggleButtonModel.setSelected): Removed.
	(JToggleButton): Call super() and init(String, Icon) instead